--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beadify</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <center>
+ <div class="navbar">
+    <div class="logo">
+    <h1>beadify</h1>
+    </div>
+    <button class="orderbutton">Order</button>
+ </div>   
+</center>
+</body>
+</html>
