--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <center>
  <div class="navbar">
     <div class="logo">
-    <h1>beadify</h1>
+    <h1>beadify™</h1>
+    </div>
+    <div class="slogan">
+        THE ORIGINAL BEAD SNAKE CO.
     </div>
     <button class="orderbutton">Order</button>
  </div>   
