--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <center>
  <div class="navbar">
     <div class="logo">
-    <h1>beadify™</h1>
+    <h1>beadify</h1>
     </div>
     <div class="slogan">
-        THE ORIGINAL BEAD SNAKE CO.
+       Creators of the Bead Snake!
     </div>
+     <br>
     <button class="orderbutton">Order</button>
+     <br>
+<hr>
  </div>   
 </center>
 </body>
