--- a/order.html
+++ b/order.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beadify | Order Form</title>
+    <title>Order Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+ <center>
+    <h1 class="thethingyatthetopofdaform">Order</h1>
+    <hr>
+    <hr>
+    <form name="order" method="POST" data-netlify="true">
+        <p>
+          <label>Name <input type="text" name="name" /></label>
+        </p>
+        <p>
+          <label>Class <input type="text" name="name" /></label>
+        </p>
+        <p>
+          <label>Special Requests <textarea name="special-request"></textarea></label>
+        </p>
+        <p>
+          <button class="button-18" type="submit">Order</button>
+        </p>
+      </form>
+      <p>You may be suspended from ordering if your order isn't serious, or have no money to use.</p>
+ </center>   
 </body>
 </html>
