--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        Creators of the Bead Snake!
     </div>
      <br>
-    <button class="button-18">Order</button>
+    <button href="order.html" class="button-18">Order</button>
      <br>
      <br>
 <hr>
