--- a/order.html
+++ b/order.html
@@ -20,6 +20,7 @@
           <label>Class <input type="text" name="name" /></label>
         </p>
         <br>
+        <div class="colors">
         <label for="color1">Color 1 </label>
         <input type="text" name="color1" id="color1" required placeholder="Enter first color" />
         
@@ -30,8 +31,8 @@
         <input type="text" name="color3" id="color3" placeholder="Enter third color (optional)" />
         
         <label for="color4">Color 4 (optional):</label>
-        <input type="text" name="color4" id="color4" placeholder="Enter fourth color (optional)" />
-        <p>
+        <input type="text" name="color4" id="color4" placeholder="Enter fourth color (optional)" /> 
+        </div>
           <button class="button-18" type="submit">Order</button>
         </p>
       </form>
