--- a/order.html
+++ b/order.html
@@ -21,6 +21,9 @@
         </p>
         <br>
         <div class="colors">
+            <label for="basecolor">Base Color </label>
+            <input type="text" name="basecolor" id="basecolor" required placeholder=" " />
+            <p> </p>
         <label for="color1">Color 1 </label>
         <input type="text" name="color1" id="color1" required placeholder=" " />
         <p> </p>
