--- a/order.html
+++ b/order.html
@@ -38,7 +38,7 @@
         <p> </p>
         </div>
         <br>
-          <button class="button-18" type="submit">Order</button>
+          <button class="button-18" type="submit">Place Order</button>
         </p>
       </form>
       <p>You may be suspended from ordering if your order isn't serious, or have no money to use.</p>
