--- a/order.html
+++ b/order.html
@@ -9,6 +9,14 @@
 </head>
 <body>
  <center>
+    <div class="navbar">
+        <div class="logo">
+        <h1>beadify</h1>
+        </div>
+        <div class="slogan">
+           Creators of the Bead Snake!
+        </div>
+         <br>
     <h1 class="thethingyatthetopofdaform">Order</h1>
     <br>
     <br>
