--- a/order.html
+++ b/order.html
@@ -16,6 +16,7 @@
         <div class="slogan">
            Creators of the Bead Snake!
         </div>
+        <br>
          <hr>
     <h1 class="thethingyatthetopofdaform">Order</h1>
     <br>
@@ -50,7 +51,9 @@
         </p>
       </form>
       <p>You may be suspended from ordering if your order isn't serious, or have no money to use.</p>
-      
+      <br>
+      <br>
+      <p>© 2023 Beadify Inc. <i>All rights reserved.</i></p>
  </center>   
 </body>
 </html>
