--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
      <br>
      <br>
 <hr>
- </div>   
+ </div>  
+ <p>© 2023 Beadify Inc. <i>All rights reserved.</i></p> 
 </center>
 </body>
 </html>
