--- a/order.html
+++ b/order.html
@@ -21,7 +21,8 @@
     <h1 class="thethingyatthetopofdaform">Order</h1>
     <br>
     <br>
-    <form name="order" method="POST" data-netlify="true">
+    <form name="order" method="POST" data-netlify="true" action="success.html">
+
         <p>
           <label>Name <input type="text" name="name" /></label>
         </p>
