--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <center>
  <div class="navbar">
     <div class="logo">
-    <h1>beadify</h1>
+   <a href="index.html"><h1>beadify</h1></a>
     </div>
     <div class="slogan">
        Creators of the Bead Snake!
