--- a/success.html
+++ b/success.html
@@ -4,6 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Successful</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 50px;
+    }
+  
+    h1 {
+      color: #4CAF50;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+  
+    p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+  
+    a {
+      display: inline-block;
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 18px;
+    }
+  
+    a:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
     <center>
