--- a/success.html
+++ b/success.html
@@ -6,14 +6,14 @@
   <title>Order Successful</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #fff;
       text-align: center;
       padding: 50px;
     }
   
     h1 {
-      color: #4CAF50;
+      color: #5e60d3;
       font-size: 36px;
       margin-bottom: 20px;
     }
@@ -25,7 +25,7 @@
   
     a {
       display: inline-block;
-      background-color: #4CAF50;
+      background-color: #5e60d3;
       color: white;
       padding: 10px 20px;
       text-decoration: none;
@@ -34,7 +34,7 @@
     }
   
     a:hover {
-      background-color: #45a049;
+      background-color: #4546a0;
     }
   </style>
 </head>
