--- a/success.html
+++ b/success.html
@@ -56,7 +56,7 @@
 <body>
     <center>
   <h1>Thank you for your order!</h1>
-  <p>Your bead snake order has been successfully submitted. We will process your order shortly.</p>
+  <p>Your order has been successfully submitted. We will process it shortly.</p>
   <a href="index.html">Return to Homepage</a>
 </center>
 </body>
