--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
           <label>Name <input type="text" name="name" /></label>
         </p>
         <p>
-          <label>Class <input type="text" name="name" /></label>
+          <label>Class <input type="text" name="class" /></label>
         </p>
         <br>
         <div class="colors">
@@ -46,13 +46,13 @@
         <label for="color4">Color 4 </label>
         <input type="text" name="color4" id="color4" placeholder=" " /> 
         <br>
-        <p>$2.00</p>
+        
         </div>
         <br>
           <button class="button-18" type="submit">Place Order</button>
         </p>
       </form>
-      <p>You may be suspended from ordering if your order isn't serious, or have no money to use.</p>
+      <p>Please make sure your order is serious, and that you have sufficient funds.</p>
       <br>
       <br>
       <p>© 2023 Beadify Inc. <i>All rights reserved.</i></p>
