--- a/order.html
+++ b/order.html
@@ -46,7 +46,8 @@
         <label for="color4">Color 4 </label>
         <input type="text" name="color4" id="color4" placeholder=" " /> 
         <br>
-        <button id="calculateButton">Calculate Price</button>
+        <br>
+        <button class="button-18" id="calculateButton">Calculate Price</button>
         <p id="priceText" style="display: none;">$2.00</p>
       
         <script>
@@ -55,6 +56,7 @@
           });
         </script>
         </div>
+        <br>
         <br>
           <button class="button-18" type="submit">Place Order</button>
         </p>
