--- a/order.html
+++ b/order.html
@@ -47,12 +47,18 @@
         <input type="text" name="color4" id="color4" placeholder=" " /> 
         <br>
         <br>
-        <button class="button-18" id="calculateButton">Calculate Price</button>
-        <p id="priceText" style="display: none;">$2.00</p>
+        <p id="priceText">$0 .00</p>
       
-        <script>
-          document.getElementById("calculateButton").addEventListener("click", function() {
-            document.getElementById("priceText").style.display = "block";
+        <script>    
+        const basecolor = document.getElementById('basecolor');
+          const priceText = document.getElementById('priceText');
+      
+          basecolor.addEventListener('input', () => {
+            if (basecolor.value.trim() !== '') {
+              priceText.textContent = '$2.00';
+            } else {
+              priceText.textContent = '$0.00';
+            }
           });
         </script>
         </div>
