--- a/order.html
+++ b/order.html
@@ -47,7 +47,7 @@
         <input type="text" name="color4" id="color4" placeholder=" " /> 
         <br>
         <br>
-        <p id="priceText">$0 .00</p>
+        <p id="priceText">Total: $0.00</p>
       
         <script>    
         const basecolor = document.getElementById('basecolor');
