--- a/order.html
+++ b/order.html
@@ -55,9 +55,9 @@
       
           basecolor.addEventListener('input', () => {
             if (basecolor.value.trim() !== '') {
-              priceText.textContent = '$2.00';
+              priceText.textContent = 'Total: $2.00';
             } else {
-              priceText.textContent = '$0.00';
+              priceText.textContent = 'Total: $0.00';
             }
           });
         </script>
