--- a/order.html
+++ b/order.html
@@ -45,6 +45,11 @@
         <p> </p>
         <label for="color4">Color 4 </label>
         <input type="text" name="color4" id="color4" placeholder=" " /> 
+        <p> </p>
+        <select id="paymenttype" name="paymenttype">
+          <label for="paymenttype">Payment Type:</label>
+          <option value="cash">Cash</option>
+          <p>Credit and Debit Card Support is currently unavailable.</p>
         <br>
         <br>
         <p id="priceText">Total: $0.00</p>
