deploy fix to my silly mistake

--- a/order.html
+++ b/order.html
@@ -49,19 +49,11 @@
         <select id="paymenttype" name="paymenttype">
           <label for="paymenttype">Payment Type:</label>
           <option value="cash">Cash</option>
+          <p>Credit and Debit Card Support is currently unavailable.</p>
         <br>
         <br>
         <p id="priceText">Total: $0.00</p>
-              </div>
-        <br>
-        <br>
-          <button class="button-18" type="submit">Place Order</button>
-        </p>
-      </form>
-      <p>Please make sure your order is serious, and that you have sufficient funds.</p>
-      <br>
-      <br>
-      <p>© 2023 Beadify Inc. <i>All rights reserved.</i></p>
+      
         <script>    
         const basecolor = document.getElementById('basecolor');
           const priceText = document.getElementById('priceText');
@@ -74,7 +66,16 @@
             }
           });
         </script>
-
+        </div>
+        <br>
+        <br>
+          <button class="button-18" type="submit">Place Order</button>
+        </p>
+      </form>
+      <p>Please make sure your order is serious, and that you have sufficient funds.</p>
+      <br>
+      <br>
+      <p>© 2023 Beadify Inc. <i>All rights reserved.</i></p>
  </center>   
 </body>
 </html>
