--- a/order.html
+++ b/order.html
@@ -45,6 +45,12 @@
         <p> </p>
         <label for="color4">Color 4 </label>
         <input type="text" name="color4" id="color4" placeholder=" " /> 
+        <p> </p>
+        <p>Payment Type</p>
+  <label>
+    <input name="paymenttype" type="radio" value="cash">
+    Cash
+  </label>
         <br>
         <br>
         <p id="priceText">Total: $0.00</p>
