--- a/order.html
+++ b/order.html
@@ -48,7 +48,7 @@
         <p> </p>
         <p>Payment Type</p>
   <label>
-    <input name="paymenttype" type="radio" value="cash">
+    <input name="paymenttype" type="radio" value="cash" required placeholder=" " >
     Cash
   </label>
         <br>
