--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
      <br>
     <a href="order.html"><button class="button-18">Order</button></a>
+    <a href="giftcards.html"><button class="button-18">Gift Cards</button></a>
      <br>
      <br>
 <hr>
