GIFT CARDS ARE HERE

--- a/order.html
+++ b/order.html
@@ -51,6 +51,10 @@
     <input name="payment type" type="radio" value="cash" required placeholder=" " >
     Cash
   </label>
+  <label>
+    <input name="payment type" type="radio" value="giftcard" required placeholder=" " >
+    Gift Card
+  </label>
         <br>
         <br>
         <p id="priceText">Total: $0.00</p>
