--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <center>
  <div class="navbar">
-    <div class="logo">
+    <element class="logo">
    <a href="index.html"><h1>beadify</h1></a>
-    </div>
+    </element>
     <div class="slogan">
        Creators of the Bead Snake!
     </div>
