--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 <hr>
 <br>
 <div class="colors">
-   <h2>Estimated Shipping Date: <element class="blue">May 15th, 2023</element> at <element class="blue">9:13 AM</element></h2>
-   <p>Please note that if you had placed your order at least one day prior, it is expected to be shipped on the date displayed above.</p>
+    <h2>Packaging Date: <element class="blue">May 15th, 2023</element> at <element class="blue">6:18 PM</element></h2>
+   <p>If you order a day prior, this is an <i>estimate</i> of when your order will be packed.</p>
+
+   <h2>Shipping Date: <element class="blue">May 16th, 2023</element> at <element class="blue">9:14 AM</element></h2>
+   <p>If you ordered 1-2 days prior, this is an <i>estimate</i> of when you'll recieve your order.</p>
 </div>
 <br>
 <hr>
